--- a/src/main/resources/ui/main-view.fxml
+++ b/src/main/resources/ui/main-view.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="447.0" prefWidth="683.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="447.0" prefWidth="683.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml">
   <content>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="443.0" prefWidth="680.0">
          <children>
@@ -33,12 +33,12 @@
                   </HBox>
                   <TableView fx:id="tvDownloads" editable="true" prefHeight="393.0" prefWidth="683.0">
                     <columns>
-                      <TableColumn fx:id="tcName" editable="false" prefWidth="227.33328759670258" text="Nombre" />
-                      <TableColumn fx:id="tcProgress" editable="false" minWidth="0.0" prefWidth="162.0000457763672" text="Progreso" />
+                      <TableColumn fx:id="tcName" editable="false" prefWidth="240.00003564357758" text="Nombre" />
+                      <TableColumn fx:id="tcProgress" editable="false" minWidth="0.0" prefWidth="149.99998474121094" text="Progreso" />
                         <TableColumn fx:id="tcStatus" editable="false" minWidth="0.0" prefWidth="77.3333740234375" text="Estado" />
                         <TableColumn fx:id="tcSize" editable="false" minWidth="0.0" prefWidth="76.00003051757812" text="Tamaño" />
-                        <TableColumn fx:id="tcTime" prefWidth="62.0" text="Tiempo" />
-                        <TableColumn fx:id="tcStop" editable="false" minWidth="0.0" prefWidth="69.33331298828125" />
+                        <TableColumn fx:id="tcTime" prefWidth="74.66668701171875" text="Tiempo" />
+                        <TableColumn fx:id="tcStop" editable="false" minWidth="0.0" prefWidth="56.6666259765625" />
                     </columns>
                   </TableView>
                </children>
