--- a/src/main/resources/ui/main-view.fxml
+++ b/src/main/resources/ui/main-view.fxml
@@ -11,11 +11,11 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="447.0" prefWidth="683.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml">
+<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="446.0" prefWidth="694.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
   <content>
-    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="443.0" prefWidth="680.0">
+    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="443.0" prefWidth="689.0">
          <children>
-            <VBox prefHeight="447.0" prefWidth="683.0">
+            <VBox prefHeight="447.0" prefWidth="689.0">
                <children>
                   <HBox alignment="CENTER" prefHeight="53.0" prefWidth="583.0">
                      <VBox.margin>
@@ -31,14 +31,15 @@
                         <Button fx:id="bDownload" mnemonicParsing="false" onAction="#onDownloadButtonClick" text="Descargar" />
                      </children>
                   </HBox>
-                  <TableView fx:id="tvDownloads" editable="true" prefHeight="393.0" prefWidth="683.0">
+                  <TableView fx:id="tvDownloads" editable="true" prefHeight="393.0" prefWidth="850.0">
                     <columns>
-                      <TableColumn fx:id="tcName" editable="false" prefWidth="240.00003564357758" text="Nombre" />
-                      <TableColumn fx:id="tcProgress" editable="false" minWidth="0.0" prefWidth="149.99998474121094" text="Progreso" />
-                        <TableColumn fx:id="tcStatus" editable="false" minWidth="0.0" prefWidth="77.3333740234375" text="Estado" />
-                        <TableColumn fx:id="tcSize" editable="false" minWidth="0.0" prefWidth="76.00003051757812" text="Tamaño" />
-                        <TableColumn fx:id="tcTime" prefWidth="74.66668701171875" text="Tiempo" />
-                        <TableColumn fx:id="tcStop" editable="false" minWidth="0.0" prefWidth="56.6666259765625" />
+                      <TableColumn fx:id="tcName" editable="false" prefWidth="209.99996960163116" text="Nombre" />
+                      <TableColumn fx:id="tcProgress" editable="false" minWidth="0.0" prefWidth="143.3333740234375" text="Progreso" />
+                        <TableColumn fx:id="tcStatus" editable="false" minWidth="0.0" prefWidth="86.0" text="Estado" />
+                        <TableColumn fx:id="tcSize" editable="false" minWidth="0.0" prefWidth="55.33331298828125" text="Tamaño" />
+                        <TableColumn fx:id="tcTime" prefWidth="68.666748046875" text="Tiempo restante" />
+                        <TableColumn fx:id="tcVelocity" prefWidth="64.66668701171875" text="Velocidad descarga" />
+                        <TableColumn fx:id="tcStop" editable="false" minWidth="0.0" prefWidth="53.3333740234375" />
                     </columns>
                   </TableView>
                </children>
