--- a/src/main/resources/ui/main-view.fxml
+++ b/src/main/resources/ui/main-view.fxml
@@ -11,11 +11,11 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="446.0" prefWidth="766.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="446.0" prefWidth="819.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
   <content>
-    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="443.0" prefWidth="762.0">
+    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="443.0" prefWidth="816.0">
          <children>
-            <VBox prefHeight="447.0" prefWidth="766.0">
+            <VBox prefHeight="447.0" prefWidth="819.0">
                <children>
                   <HBox alignment="CENTER" prefHeight="53.0" prefWidth="583.0">
                      <VBox.margin>
@@ -38,9 +38,9 @@
                       <TableColumn fx:id="tcProgress" editable="false" minWidth="0.0" prefWidth="143.3333740234375" text="Progreso" />
                         <TableColumn fx:id="tcStatus" editable="false" minWidth="0.0" prefWidth="86.0" text="Estado" />
                         <TableColumn fx:id="tcSize" editable="false" minWidth="0.0" prefWidth="55.33331298828125" text="Tamaño" />
-                        <TableColumn fx:id="tcTime" editable="false" prefWidth="68.666748046875" text="Tiempo restante" />
-                        <TableColumn fx:id="tcVelocity" editable="false" prefWidth="64.66668701171875" text="Velocidad descarga" />
-                        <TableColumn fx:id="tcStop" editable="false" minWidth="0.0" prefWidth="53.3333740234375" />
+                        <TableColumn fx:id="tcTime" editable="false" prefWidth="97.33331298828125" text="Tiempo restante" />
+                        <TableColumn fx:id="tcVelocity" editable="false" prefWidth="60.0" text="Velocidad" />
+                        <TableColumn fx:id="tcStop" editable="false" minWidth="0.0" prefWidth="85.33331298828125" />
                     </columns>
                   </TableView>
                </children>
