--- a/src/main/resources/ui/main-view.fxml
+++ b/src/main/resources/ui/main-view.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
@@ -11,15 +12,15 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="446.0" prefWidth="819.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="446.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
   <content>
-    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="443.0" prefWidth="816.0">
+    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="443.0" prefWidth="795.0">
          <children>
-            <VBox prefHeight="447.0" prefWidth="819.0">
+            <VBox prefHeight="447.0" prefWidth="795.0">
                <children>
                   <HBox alignment="CENTER" prefHeight="53.0" prefWidth="583.0">
                      <VBox.margin>
-                        <Insets left="50.0" right="50.0" />
+                        <Insets bottom="10.0" left="50.0" right="50.0" top="10.0" />
                      </VBox.margin>
                      <children>
                         <Label text="URL de descarga:" />
@@ -31,6 +32,19 @@
                         <Button fx:id="bDownload" mnemonicParsing="false" onAction="#onDownloadButtonClick" text="Descargar" />
                      </children>
                   </HBox>
+                  <HBox alignment="CENTER_RIGHT" maxHeight="-Infinity" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="37.0" prefWidth="595.0">
+                     <children>
+                        <Label text="Path:" />
+                        <Hyperlink fx:id="hlPath" onAction="#onHyperlinkPathClick" prefHeight="24.0" prefWidth="380.0">
+                           <HBox.margin>
+                              <Insets left="10.0" />
+                           </HBox.margin>
+                        </Hyperlink>
+                     </children>
+                     <VBox.margin>
+                        <Insets bottom="10.0" />
+                     </VBox.margin>
+                  </HBox>
                   <TableView fx:id="tvDownloads" editable="true" prefHeight="393.0" prefWidth="850.0">
                     <columns>
                         <TableColumn fx:id="tcId" editable="false" prefWidth="22.66662609577179" />
@@ -40,7 +54,7 @@
                         <TableColumn fx:id="tcSize" editable="false" minWidth="0.0" prefWidth="55.33331298828125" text="Tamaño" />
                         <TableColumn fx:id="tcTime" editable="false" prefWidth="97.33331298828125" text="Tiempo restante" />
                         <TableColumn fx:id="tcVelocity" editable="false" prefWidth="60.0" text="Velocidad" />
-                        <TableColumn fx:id="tcStop" editable="false" minWidth="0.0" prefWidth="85.33331298828125" />
+                        <TableColumn fx:id="tcStop" editable="false" minWidth="0.0" prefWidth="60.6666259765625" />
                     </columns>
                   </TableView>
                </children>
