--- a/src/main/resources/ui/main-view.fxml
+++ b/src/main/resources/ui/main-view.fxml
@@ -12,15 +12,15 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="446.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="446.0" prefWidth="823.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
   <content>
-    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="443.0" prefWidth="795.0">
+    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="443.0" prefWidth="820.0">
          <children>
-            <VBox prefHeight="447.0" prefWidth="795.0">
+            <VBox alignment="CENTER_RIGHT" prefHeight="447.0" prefWidth="823.0">
                <children>
                   <HBox alignment="CENTER" prefHeight="53.0" prefWidth="583.0">
                      <VBox.margin>
-                        <Insets bottom="10.0" left="50.0" right="50.0" top="10.0" />
+                        <Insets bottom="10.0" top="10.0" />
                      </VBox.margin>
                      <children>
                         <Label text="URL de descarga:" />
@@ -32,10 +32,10 @@
                         <Button fx:id="bDownload" mnemonicParsing="false" onAction="#onDownloadButtonClick" text="Descargar" />
                      </children>
                   </HBox>
-                  <HBox alignment="CENTER_RIGHT" maxHeight="-Infinity" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="37.0" prefWidth="595.0">
+                  <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="24.0" prefWidth="823.0">
                      <children>
                         <Label text="Path:" />
-                        <Hyperlink fx:id="hlPath" onAction="#onHyperlinkPathClick" prefHeight="24.0" prefWidth="380.0">
+                        <Hyperlink fx:id="hlPath" onAction="#onHyperlinkPathClick" prefHeight="24.0" prefWidth="403.0">
                            <HBox.margin>
                               <Insets left="10.0" />
                            </HBox.margin>
@@ -45,16 +45,21 @@
                         <Insets bottom="10.0" />
                      </VBox.margin>
                   </HBox>
+                  <Button fx:id="btCleanTable" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#onCleanTableButtonClick" text="Limpiar tabla" textAlignment="CENTER">
+                     <VBox.margin>
+                        <Insets bottom="10.0" right="10.0" />
+                     </VBox.margin>
+                  </Button>
                   <TableView fx:id="tvDownloads" editable="true" prefHeight="393.0" prefWidth="850.0">
                     <columns>
                         <TableColumn fx:id="tcId" editable="false" prefWidth="22.66662609577179" />
                       <TableColumn fx:id="tcName" editable="false" prefWidth="263.3333435058594" text="Nombre" />
                       <TableColumn fx:id="tcProgress" editable="false" minWidth="0.0" prefWidth="143.3333740234375" text="Progreso" />
                         <TableColumn fx:id="tcStatus" editable="false" minWidth="0.0" prefWidth="86.0" text="Estado" />
-                        <TableColumn fx:id="tcSize" editable="false" minWidth="0.0" prefWidth="55.33331298828125" text="Tamaño" />
-                        <TableColumn fx:id="tcTime" editable="false" prefWidth="97.33331298828125" text="Tiempo restante" />
-                        <TableColumn fx:id="tcVelocity" editable="false" prefWidth="60.0" text="Velocidad" />
-                        <TableColumn fx:id="tcStop" editable="false" minWidth="0.0" prefWidth="60.6666259765625" />
+                        <TableColumn fx:id="tcSize" editable="false" minWidth="0.0" prefWidth="68.0" text="Tamaño" />
+                        <TableColumn fx:id="tcTime" editable="false" prefWidth="96.66668701171875" text="Tiempo restante" />
+                        <TableColumn fx:id="tcVelocity" editable="false" prefWidth="64.6666259765625" text="Velocidad" />
+                        <TableColumn fx:id="tcStop" editable="false" minWidth="0.0" prefWidth="74.66668701171875" />
                     </columns>
                   </TableView>
                </children>
